base/deployment_backapp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backapp
  labels:
    homework: backapp
spec:
  selector:
    matchLabels:
      homework: backapp
  replicas: 1
  template:
    metadata:
      labels:
        homework: backapp
    spec:
      containers:
        - name: backapp
          image: quay.io/drsylent/cubix/block3/homework-backapp:springboot3
          ports:
            - containerPort: 8080
