base/service_backapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: backapp
  labels:
    homework: backapp
spec:
  selector:
    homework: backapp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
